[tool.poetry]
name = "dev"
version = "0.1.0"
description = "Creates and manages containerized development environments."
keywords = ["docker", "container", "environment"]
authors = ["Kevin Herrera <kevin@herrera.io>"]
homepage = "https://github.com/kherge/sh.dev"
repository = "https://github.com/kherge/sh.dev.git"
license = "ISC"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
